[gd_scene load_steps=27 format=3 uid="uid://cullg0ljl0ex6"]

[ext_resource type="Script" uid="uid://cvhdl8355whhu" path="res://Scripts/Dungeons/Area_1_var_1/area_1_var_1.gd" id="1_dwvem"]
[ext_resource type="Script" uid="uid://bc0pa4v2utvx0" path="res://Scripts/Dungeons/dungeon_manager(A1V1).gd" id="2_wa0in"]
[ext_resource type="Script" uid="uid://df11we6uako3s" path="res://Scripts/Dungeons/Area_1_var_1/Rooms/starting_room.gd" id="3_mdnki"]
[ext_resource type="Script" uid="uid://gi3ma2tv7svj" path="res://Scripts/Dungeons/Area_1_var_1/Rooms/room_a___medium.gd" id="4_ibyc6"]
[ext_resource type="PackedScene" uid="uid://cs374206a7dyt" path="res://Scenes/RoomSpawns/medium_room_spawn.tscn" id="5_0yvo1"]
[ext_resource type="Script" uid="uid://oupik81g26s2" path="res://Scripts/Main/EnemyWave/EnemyWave.gd" id="6_ibyc6"]
[ext_resource type="Script" uid="uid://bf6yqy35jf53w" path="res://Scripts/Dungeons/Area_1_var_1/Rooms/room_b___small.gd" id="6_tonbw"]
[ext_resource type="PackedScene" uid="uid://ivgoec3n72vd" path="res://Scenes/Enemies/Orc_enemy.tscn" id="7_315x1"]
[ext_resource type="PackedScene" uid="uid://b50h76ql65ea1" path="res://Scenes/RoomSpawns/small_room_spawn.tscn" id="7_gkmiv"]
[ext_resource type="Script" uid="uid://cdrdygid30spt" path="res://Scripts/Dungeons/Area_1_var_1/Rooms/room_c___medium.gd" id="8_dulka"]
[ext_resource type="Script" uid="uid://bp8t1vp2gp4ri" path="res://Scripts/Dungeons/Area_1_var_1/Rooms/portal_room.gd" id="9_303ub"]
[ext_resource type="PackedScene" uid="uid://ds85cxxblat1n" path="res://Scenes/Enemies/basic_skeleton_archer.tscn" id="10_tonbw"]
[ext_resource type="PackedScene" uid="uid://bil2sj0ots4r2" path="res://Scenes/Enemies/basic_wolf.tscn" id="12_tonbw"]
[ext_resource type="PackedScene" uid="uid://blo2csfxsl57m" path="res://Scenes/center_platform.tscn" id="12_wa0in"]
[ext_resource type="PackedScene" uid="uid://xcriddmqeofd" path="res://Scenes/Enemies/basic_skeleton.tscn" id="13_gkmiv"]
[ext_resource type="AudioStream" uid="uid://cue0pyibbgi1g" path="res://Assets/Sfx/Background/BGM - Area 1.ogg" id="18_dulka"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ean82"]
size = Vector2(310, 342)

[sub_resource type="Resource" id="Resource_xhvfl"]
script = ExtResource("6_ibyc6")
enemy_scene = ExtResource("10_tonbw")
count = 5
spawn_delay = 1.0
wave_delay = 0.0
metadata/_custom_type_script = "uid://oupik81g26s2"

[sub_resource type="Resource" id="Resource_q8npm"]
script = ExtResource("6_ibyc6")
enemy_scene = ExtResource("7_315x1")
count = 10
spawn_delay = 1.5
wave_delay = 0.0
metadata/_custom_type_script = "uid://oupik81g26s2"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1gm7l"]
size = Vector2(507, 534)

[sub_resource type="Resource" id="Resource_dulka"]
script = ExtResource("6_ibyc6")
enemy_scene = ExtResource("10_tonbw")
count = 2
spawn_delay = 1.5
wave_delay = 0.0
metadata/_custom_type_script = "uid://oupik81g26s2"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1pun"]
size = Vector2(413, 424)

[sub_resource type="Resource" id="Resource_315x1"]
script = ExtResource("6_ibyc6")
enemy_scene = ExtResource("12_tonbw")
count = 3
spawn_delay = 1.5
wave_delay = 0.0
metadata/_custom_type_script = "uid://oupik81g26s2"

[sub_resource type="Resource" id="Resource_c0y1h"]
script = ExtResource("6_ibyc6")
enemy_scene = ExtResource("13_gkmiv")
count = 3
spawn_delay = 1.5
wave_delay = 0.0
metadata/_custom_type_script = "uid://oupik81g26s2"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_52s0k"]
size = Vector2(505, 527)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6uaq"]
size = Vector2(315, 327)

[node name="Dungeon3" type="Node2D"]
script = ExtResource("1_dwvem")

[node name="DungeonManager" type="Node2D" parent="."]
script = ExtResource("2_wa0in")

[node name="Timer" type="Timer" parent="."]

[node name="StartingRoom" type="Node2D" parent="."]
position = Vector2(-2, -7)
script = ExtResource("3_mdnki")

[node name="CameraArea" type="Area2D" parent="StartingRoom"]
visibility_layer = 3
z_index = 2
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartingRoom/CameraArea"]
position = Vector2(4, -6)
shape = SubResource("RectangleShape2D_ean82")

[node name="Right" type="Marker2D" parent="StartingRoom"]
position = Vector2(150, -6)

[node name="Bottom" type="Marker2D" parent="StartingRoom"]
position = Vector2(2, 133)

[node name="TargetContainer" type="Node2D" parent="StartingRoom"]
z_index = 2
position = Vector2(0, 1)

[node name="CenterPlatform3" parent="StartingRoom" instance=ExtResource("12_wa0in")]
z_index = 3
position = Vector2(2.38419e-07, -0.999999)

[node name="RoomA - Medium" type="Node2D" parent="."]
position = Vector2(784, -18)
script = ExtResource("4_ibyc6")
enemy_waves = Array[ExtResource("6_ibyc6")]([SubResource("Resource_xhvfl"), SubResource("Resource_q8npm")])

[node name="CameraArea" type="Area2D" parent="RoomA - Medium"]
visibility_layer = 3
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomA - Medium/CameraArea"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_1gm7l")

[node name="Left" type="Marker2D" parent="RoomA - Medium"]
position = Vector2(-247, 8)

[node name="Bottom" type="Marker2D" parent="RoomA - Medium"]
position = Vector2(-1, 248)

[node name="TargetContainer" type="Node2D" parent="RoomA - Medium"]
z_index = 4
position = Vector2(0, 1)

[node name="EnemyContainer" type="Node2D" parent="RoomA - Medium"]
z_index = 2
position = Vector2(1, 0)

[node name="MediumRoomSpawn" parent="RoomA - Medium" instance=ExtResource("5_0yvo1")]

[node name="TileMapLayer" parent="RoomA - Medium/MediumRoomSpawn" index="0"]
visible = false

[node name="SpawnLocations" parent="RoomA - Medium/MediumRoomSpawn" index="1"]
position = Vector2(1, 2)

[node name="CenterPlatform4" parent="RoomA - Medium" instance=ExtResource("12_wa0in")]
z_index = 3
position = Vector2(0, 1)

[node name="RoomB - Small" type="Node2D" parent="."]
position = Vector2(1, 804)
script = ExtResource("6_tonbw")
enemy_waves = Array[ExtResource("6_ibyc6")]([SubResource("Resource_dulka")])

[node name="CameraArea" type="Area2D" parent="RoomB - Small"]
visibility_layer = 3
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomB - Small/CameraArea"]
position = Vector2(-0.5, 4)
shape = SubResource("RectangleShape2D_f1pun")

[node name="Top" type="Marker2D" parent="RoomB - Small"]
position = Vector2(0, -214)

[node name="Left" type="Marker2D" parent="RoomB - Small"]
position = Vector2(-198, -7)

[node name="TargetContainer" type="Node2D" parent="RoomB - Small"]
z_index = 4
position = Vector2(-1, -2)

[node name="EnemyContainer" type="Node2D" parent="RoomB - Small"]
z_index = 2
position = Vector2(-3, 2)

[node name="SmallRoomSpawn" parent="RoomB - Small" instance=ExtResource("7_gkmiv")]

[node name="TileMapLayer" parent="RoomB - Small/SmallRoomSpawn" index="0"]
visible = false

[node name="SpawnLocations" parent="RoomB - Small/SmallRoomSpawn" index="1"]
position = Vector2(-1, -3)

[node name="CenterPlatform2" parent="RoomB - Small" instance=ExtResource("12_wa0in")]
z_index = 3
position = Vector2(-1.96695e-06, -1.99994)

[node name="RoomC - Medium" type="Node2D" parent="."]
position = Vector2(-898, 796)
script = ExtResource("8_dulka")
enemy_waves = Array[ExtResource("6_ibyc6")]([SubResource("Resource_315x1"), SubResource("Resource_c0y1h")])

[node name="CameraArea" type="Area2D" parent="RoomC - Medium"]
visibility_layer = 3
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomC - Medium/CameraArea"]
position = Vector2(3.5, 0.5)
shape = SubResource("RectangleShape2D_52s0k")

[node name="Right" type="Marker2D" parent="RoomC - Medium"]
position = Vector2(260, 8)

[node name="TargetContainer" type="Node2D" parent="RoomC - Medium"]
z_index = 4
position = Vector2(1, 6)

[node name="EnemyContainer" type="Node2D" parent="RoomC - Medium"]
z_index = 2
position = Vector2(16, 5)

[node name="MediumRoomSpawn" parent="RoomC - Medium" instance=ExtResource("5_0yvo1")]

[node name="TileMapLayer" parent="RoomC - Medium/MediumRoomSpawn" index="0"]
visible = false

[node name="SpawnLocations" parent="RoomC - Medium/MediumRoomSpawn" index="1"]
position = Vector2(16, 7)

[node name="CenterPlatform" parent="RoomC - Medium" instance=ExtResource("12_wa0in")]
z_index = 3
position = Vector2(1, 6)

[node name="PortalRoom" type="Node2D" parent="."]
position = Vector2(785, 755)
script = ExtResource("9_303ub")

[node name="CameraArea" type="Area2D" parent="PortalRoom"]
visibility_layer = 3
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalRoom/CameraArea"]
position = Vector2(-2.5, 7.5)
shape = SubResource("RectangleShape2D_n6uaq")

[node name="Top" type="Marker2D" parent="PortalRoom"]
position = Vector2(-1, -159)

[node name="PortalContainer" type="Node2D" parent="PortalRoom"]
z_index = 5
position = Vector2(0, 70)

[node name="TargetContainer" type="Node2D" parent="PortalRoom"]
z_index = 2
position = Vector2(-2, -54)

[node name="Platforms" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_dulka")
autoplay = true
bus = &"Music"
parameters/looping = true

[connection signal="body_entered" from="StartingRoom/CameraArea" to="StartingRoom" method="_on_camera_area_body_entered"]
[connection signal="body_exited" from="StartingRoom/CameraArea" to="StartingRoom" method="_on_camera_area_body_exited"]
[connection signal="body_entered" from="RoomA - Medium/CameraArea" to="RoomA - Medium" method="_on_camera_area_body_entered"]
[connection signal="body_exited" from="RoomA - Medium/CameraArea" to="RoomA - Medium" method="_on_camera_area_body_exited"]
[connection signal="body_entered" from="RoomB - Small/CameraArea" to="RoomB - Small" method="_on_camera_area_body_entered"]
[connection signal="body_exited" from="RoomB - Small/CameraArea" to="RoomB - Small" method="_on_camera_area_body_exited"]
[connection signal="body_entered" from="RoomC - Medium/CameraArea" to="RoomC - Medium" method="_on_camera_area_body_entered"]
[connection signal="body_exited" from="RoomC - Medium/CameraArea" to="RoomC - Medium" method="_on_camera_area_body_exited"]
[connection signal="body_entered" from="PortalRoom/CameraArea" to="PortalRoom" method="_on_camera_area_body_entered"]
[connection signal="body_exited" from="PortalRoom/CameraArea" to="PortalRoom" method="_on_camera_area_body_exited"]

[editable path="RoomA - Medium/MediumRoomSpawn"]
[editable path="RoomB - Small/SmallRoomSpawn"]
[editable path="RoomC - Medium/MediumRoomSpawn"]
